--- a/amlifi-website/package.json
+++ b/amlifi-website/package.json
@@ -20,7 +20,10 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
-    "eslint": "^8.56.0"
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.56.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.5"
   },
   "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
   "main": "index.js",
