--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "@prisma/client": "^5.10.0",
+    "@prisma/client": "^6.7.0",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
-    "prisma": "^5.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.11.1",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.12",
@@ -36,6 +36,7 @@
     "eslint-config-next": "14.1.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.33",
+    "prisma": "^6.7.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
